# ai-mem

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md
.github/workflows/: ci.yml
api/: requirements.txt
api/embedding_worker/: function.json  run.py
api/memory_api/: function.json  run.py
client/: .gitignore  README.md  pyproject.toml
client/src/ai_mem/: cli.py  client.py  journal.py  mcp_server.py
docs/: DECISIONS.md  EXECUTION-BOARD.md  OUTCOME_EVENTS.md  PHASE1-DESIGN.md  PHASE2-EXECUTION.md  PROJECT.md  STATUS.md  TECHNICAL-REPORT.md  TODO.md
docs/architecture/: 07-rg-rg-codexmem-wus2.mmd
scripts/azure/: Build-CodexMemoryAzureClientPackage.ps1  Invoke-CodexMemoryAzureBuild.ps1  Invoke-CodexMemoryClientSetup.ps1  Invoke-CodexMemoryEmbeddingHealth.ps1  Invoke-CodexMemoryFunctionDeploy.ps1  Invoke-CodexMemoryTelemetryAlerts.ps1  New-CodexMemoryTelemetryBaseline.ps1
scripts/mcp/: ai_mem_server.py
tests/: CodexMemoryAzure.Tests.ps1
